Olympus/src/objects/HSFE_Account_Territory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_To_Territory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HSFE_Combination_Key__c</fullName>
        <externalId>true</externalId>
        <label>Combination Key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Specialty__c</fullName>
        <label>Specialty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Specialty__c</fullName>
        <label>Sub Specialty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>HSEF_Territory__c</referenceTo>
        <relationshipName>Account_To_Territory</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Territory</label>
    <nameField>
        <displayFormat>AT - {000000}</displayFormat>
        <label>Account To Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Territory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>